--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   lottie: ^3.1.2
   permission_handler: ^11.3.1
   on_audio_query: ^2.9.0
+  just_audio: ^0.9.40
+  audioplayers: ^6.1.0
+  just_audio_background: ^0.0.1-beta.13
 
 
 dev_dependencies:
