--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   hive_flutter: ^1.1.0
   fluttertoast: ^8.2.8
   flutter_slidable: ^3.1.1
+  share_plus: ^10.0.2
+  path_provider: ^2.1.4
 
 
 
@@ -64,7 +66,6 @@ dev_dependencies:
   flutter_lints: ^4.0.0
   hive_generator: ^2.0.1
   build_runner: ^2.4.12
-  path_provider: ^2.1.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
