--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,6 +86,7 @@ flutter:
      - asset/image/woman (1).png
      - asset/image/woman.png
      - asset/image/profile.jpg
+     - asset/image/singer-bee-cartoon-character-with-empty-banner.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
