--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   share_plus: ^10.0.2
   path_provider: ^2.1.4
   shared_preferences: ^2.3.2
+  timer_picker_spinner_with_hours_and_minutes: ^0.0.1
 
 
 
@@ -82,6 +83,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - asset/Animation - 1725032034100.json
+     - asset/nowplaying/Animation - 1726483606689.json
      - asset/image/gamer.png
      - asset/image/man.png
      - asset/image/woman (1).png
