--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.0+2
 
 environment:
   sdk: ^3.5.1
@@ -53,6 +53,7 @@ dependencies:
   path_provider: ^2.1.4
   shared_preferences: ^2.3.2
   timer_picker_spinner_with_hours_and_minutes: ^0.0.1
+  rename: ^3.0.2
 
 
 
@@ -68,6 +69,12 @@ dev_dependencies:
   flutter_lints: ^4.0.0
   hive_generator: ^2.0.1
   build_runner: ^2.4.12
+  flutter_launcher_icons: ^0.13.1
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "asseticon/music-notes.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -84,12 +91,6 @@ flutter:
   assets:
      - asset/Animation - 1725032034100.json
      - asset/nowplaying/Animation - 1726483606689.json
-     - asset/image/gamer.png
-     - asset/image/man.png
-     - asset/image/woman (1).png
-     - asset/image/woman.png
-     - asset/image/profile.jpg
-     - asset/image/singer-bee-cartoon-character-with-empty-banner.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
