--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,7 +73,7 @@ dev_dependencies:
 flutter_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "asseticon/music-notes.png"
+  image_path: "asset/icon/music-player.png"
   min_sdk_android: 21 # android min sdk min:16, default 21
 
 # For information on the generic Dart part of this file, see the
