--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -31,8 +31,10 @@ android {
         // For more information, see: https://flutter.dev/to/review-gradle-config.
         minSdk = flutter.minSdkVersion
         targetSdk = flutter.targetSdkVersion
-        versionCode = flutter.versionCode
-        versionName = flutter.versionName
+        // versionCode = flutter.versionCode
+        // versionName = flutter.versionName
+        versionCode 3  // Increment this for each new release
+        versionName "1.2"  // Update this to a new version name
     }
     signingConfigs {
         release {
